--- a/tenzies/src/index.css
+++ b/tenzies/src/index.css
@@ -5,37 +5,58 @@
 
 body {
   margin: 0;
-  background: #0b2434;
+  background-color: #0b2434;
+  padding: 20px;
 }
 
 main {
-  width: 90vw;
-  height: 90vh;
-  border-radius: 10px;
-  background: #fff;
-  margin: 5vh auto;
+  background-color: #fff;
+  height: 80vh;
+  width: 80vw;
+  border-radius: 5px;
+  padding: 20px;
   display: flex;
+  margin: 10vh auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.row {
-  display: flex;
+.dice-container {
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
 }
 
-.dice-com {
-  width: 90px;
-  height: 90px;
-  margin: 10px;
-  background-color: #cdf4ff;
+.die-face {
+  height: 100px;
+  width: 100px;
+  box-shadow: 0 5px 2px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   display: flex;
+  background-color: aliceblue;
   justify-content: center;
   align-items: center;
-  font-weight: bold;
-  text-align: center;
-  vertical-align: middle;
+  cursor: pointer;
+}
+
+.die-num {
   font-size: 2rem;
-  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.rollingBtn {
+  width: 200px;
+  border: 0;
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 100px;
+  background-color: #5035ff;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: transform 0.05s ease-in-out;
+}
+
+.rollingBtn:active {
+  transform: scale(0.95);
 }
